apps/kube-prometheus-stack/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  annotations:
    external-dns.kubernetes.io/target: "${SECRET_GATEWAY}"
spec:
  parentRefs:
  - name: internal
    namespace: networking
  - name: external
    namespace: networking
  hostnames:
  - "alert-manager.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    external-dns.kubernetes.io/target: "${SECRET_GATEWAY}"
spec:
  parentRefs:
  - name: internal
    namespace: networking
  - name: external
    namespace: networking
  hostnames:
  - "grafana.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    external-dns.kubernetes.io/target: "${SECRET_GATEWAY}"
spec:
  parentRefs:
  - name: internal
    namespace: networking
  - name: external
    namespace: networking
  hostnames:
  - "prometheus.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
